<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.1.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>net.jrodolfo</groupId>
	<artifactId>java-evolution</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>java-evolution</name>
	<description>Didactic Java reference project demonstrating features introduced from Java 8 through Java 25.</description>
	<url>https://github.com/jrodolfo/java-evolution</url>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/license/mit</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>jrodolfo</id>
			<name>Rod Oliveira</name>
			<url>https://jrodolfo.net</url>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:https://github.com/jrodolfo/java-evolution.git</connection>
		<developerConnection>scm:git:https://github.com/jrodolfo/java-evolution.git</developerConnection>
		<tag>HEAD</tag>
		<url>https://github.com/jrodolfo/java-evolution</url>
	</scm>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>25</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Xshare:off --enable-native-access=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<encoding>${project.build.sourceEncoding}</encoding>
					<docencoding>${project.build.sourceEncoding}</docencoding>
					<charset>${project.build.sourceEncoding}</charset>
					<doclint>none</doclint>
					<outputDirectory>${project.build.directory}/site</outputDirectory>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
